--- a/demo.html
+++ b/demo.html
@@ -22,8 +22,8 @@
 
         <!-- Convert this to an external style sheet -->
         <link rel="stylesheet" href="/css/template.css">
-        <link rel="stylesheet" href="/css/demo.css">
-        <link rel="stylesheet" href="/css/font.css">
+        <link rel="stylesheet" href="/css/demo.css">       
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
 
     <body>
