--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>CSS Gradient Text Demo</title>
+        <title>CSS Gradient Text Demo by Coder Foundry</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,6 +24,8 @@
         <!-- Convert this to an external style sheet -->
         <link rel="stylesheet" href="/css/template.css">
         <link rel="stylesheet" href="/css/index.css">
+
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     </head>
 
