add media queries for ghost echo

--- a/GhostEcho.html
+++ b/GhostEcho.html
@@ -55,7 +55,7 @@
             </div>
         </nav>
         <main class="d-flex flex-column align-items-center h-100 hacker">
-            <div class="title p-5 flex-grow-1">GHOSTECHO</div>
+            <div class="title flex-grow-1">GHOSTECHO</div>
             <div class="subtitle mb-5 text-center">Always Connected. Never Found.</div>
         </main>
 
