--- a/demo.html
+++ b/demo.html
@@ -8,9 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
- 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -22,16 +22,16 @@
 
         <!-- Convert this to an external style sheet -->
         <link rel="stylesheet" href="/css/template.css">
-        <link rel="stylesheet" href="/css/demo.css">       
+        <link rel="stylesheet" href="/css/demo.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbg" >
+        <nav class="navbar navbar-expand-md navbg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                   <img src="/img/CF_Mark.jpg" height="40"> Coder Foundry
+                    <img src="/img/CF_Mark.jpg" height="40"> Coder Foundry
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,16 +52,20 @@
                 </div>
             </div>
         </nav>
-        <!-- ======= Hero Section ======= -->
-        <main class="container-xxl vstack gap-4 my-4 ">
-            <div class="boxOne flex-grow-1">HERO TEXT</div>
-            <div class="boxTwo flex-grow-1">HERO TEXT</div>
-            <div class="boxThree flex-grow-1">HERO TEXT</div>
+
+
+        <!----------- HERO TEXT DEMO ----------->
+        <main class="container-xxl vstack gap-4">
+            <div class="boxOne">HERO TEXT</div>
+            <div class="boxTwo">HERO TEXT</div>
+            <div class="boxThree">HERO TEXT</div>
         </main>
+
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
+
     </body>
 
 </html>
