home page and demo font size

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <!-- ======= Hero Section ======= -->
         <main class="container-xxl">
             <div class="row h-100 align-items-center justify-content-center">
-                <div class="col-10 col-lg-6">
-                    <img src="/img/bugtrakerlogo.png" class="d-block img-fluid" alt="Bootstrap Themes">
+                <div class="col-10 col-lg-6 text-center">
+                    <img src="/img/bugtrakerlogo.png" class="d-block img-fluid p-3" alt="Bootstrap Themes">
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="mb-3 title">Ship great software with our bug tracker</div>
@@ -83,7 +83,6 @@
                         <div class="lead ctaSubTitle">Apply to Coder Foundry today!</div>
                         <a href="https://www.coderfoundry.com/apply" target="_blank" class="btn btn-info btn-lg">Apply
                             Now!</a>
-
                     </div>
                     <div class="col col-lg-3 text-center text-lg-end">
                         <a href="https://github.com/CoderFoundry" target="_blank" class="text-decoration-none">
