add new links to the navbar

--- a/GhostEcho.html
+++ b/GhostEcho.html
@@ -51,6 +51,16 @@
                             <a class="nav-link active" href="/GhostEcho.html">GhostEcho</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://github.com/CoderFoundry/CSSGradientDemo"><i
+                                    class="bi bi-github"></i> Get
+                                The Repo!</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link2.html"><i class="bi bi-youtube"></i> Watch on Youtube!</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
