--- a/demo.html
+++ b/demo.html
@@ -11,6 +11,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -28,7 +30,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbg">
+        <nav class="navbar navbar-expand-md navbg" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="/img/CF_Mark.jpg" height="40"> Coder Foundry
@@ -47,6 +49,16 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/GhostEcho.html">GhostEcho</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link" target="_blank"
+                                href="https://github.com/CoderFoundry/CSSGradientDemo"><i class="bi bi-github"></i> Get
+                                The Repo!</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link2.html"><i class="bi bi-youtube"></i> Watch on Youtube!</a>
                         </li>
                     </ul>
                 </div>
