--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
                             <a class="nav-link" href="/GhostEcho.html">Ghost Echo</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link" target="_blank"
+                                href="https://github.com/CoderFoundry/CSSGradientDemo"><i class="bi bi-github"></i> Get
+                                The Repo!</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/link2.html"><i class="bi bi-youtube"></i> Watch on Youtube!</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
